k8s/apps/monitoring/grafana-oidc-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-prometheus-stack-grafana
  namespace: monitoring
spec:
  template:
    spec:
      volumes:
        - name: grafana-oidc-secret
          secret:
            secretName: grafana-oidc-secret
        - name: homelab-ca-bundle
          configMap:
            name: homelab-ca-bundle
      containers:
        - name: grafana-sc-dashboard
        - name: grafana-sc-datasources
        - name: grafana
          volumeMounts:
            - name: grafana-oidc-secret
              mountPath: /etc/secrets/grafana-oidc
              readOnly: true
            - name: homelab-ca-bundle
              mountPath: /etc/ssl/homelab
              readOnly: true
